plugins {
    id 'java-library'
    id "ch.ergon.gradle.goodies.versioning"
    id("org.jreleaser") version "1.18.0"
}

group 'ch.ergon.adam'
description 'The core functionality of ADAM'

sourceCompatibility = 21

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.1'
    api 'com.google.guava:guava:33.3.0-jre'
    api group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.0.0.202409031743-r'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
    implementation group: 'org.clapper', name: 'javautil', version: '3.2.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.1'
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '3.0'
}

apply from: "${rootProject.projectDir}/publish.gradle"
apply from: "${rootProject.projectDir}/common.gradle"

test {
    useJUnitPlatform()
}
